# paris-hackathon-2026-inference

./: .gitignore  EVAL_HANDOFF.md  HACKING.md  QUICKSTART.md  README.md  STATUS.md  pyproject.toml
baseline/: run_baseline.sh
bench/: .status_intro.md  microbench_dp_overhead.py  quick_throughput.py  refresh_status.py
docs/: parallelism.md
engine/kernels/: __init__.py  delta_rule.py  moe_dispatch.py  moe_grouped_mlp.py  patch.py
engine/model/: ep.py  qwen3_next.py  tp_shard.py
engine/runtime/: compile_helpers.py  cuda_graphs.py  engine.py  ep.py  kv_cache.py  metrics.py  model_runner.py  prefix_cache.py  profiling.py  scheduler.py  sequence.py  spec_decode.py  tp_worker.py
engine/tokenizer/: chat_template.py
eval/: check_server.py  score.py
eval/correctness/: run_correctness.py
eval/throughput/: run_throughput.py
profiles/: README.md  iter5_c8_153937.json  throughput_44959f7_20260409-130038.json  throughput_FINAL_164741.json  throughput_LAST_170146.json  throughput_dp4_FIXED_161229.json  throughput_iter2_nograph_47c25de_150138.json  throughput_iter5_n64_152940.json  throughput_iter5_safe_152612.json  throughput_iter5_safe_153531.json  throughput_phase1_44959f7_20260409-114730.json  throughput_phase1_gpu7_20260409-120632.json  throughput_phase2a_dfa7b3a_20260409-142547.json  throughput_phase2a_iter1_dfadf45_144239.json  throughput_phase2a_iter1_dfadf45_144640.json  torch_phase1_microbatch_b16_n32_44959f7_20260409-130244.summary.json
scripts/: download_weights.sh  smoke_gen.py  start.sh  start_dp.sh  stop.sh  stop_dp.sh
server/: app.py  dp_proxy.py  main.py  protocol.py
