[project]
name = "hackathon"
version = "0.1.0"
description = "Evaluation harness for Qwen3.5-35B-A3B inference engine hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "lm-eval[api]>=0.4.4",
    "transformers>=4.45",
    "tabulate",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
baseline = ["vllm>=0.8"]
engine = [
    "torch>=2.5",
    "transformers>=4.47",
    "safetensors>=0.4",
    "huggingface_hub>=0.25",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "tokenizers>=0.20",
    "einops>=0.8",
    "nvidia-ml-py>=12.560",
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["eval*", "engine*", "server*"]

[project.scripts]
check-server = "eval.check_server:main"
run-correctness = "eval.correctness.run_correctness:main"
run-throughput = "eval.throughput.run_throughput:main"
